# dgx-spark

./: .gitignore  1_ministral_3_rl_sudoku.py  3_merge_for_vllm_v2.py  4-alt_push_manual.py  4_save_to_hf_v2.py  PROJECT_README.md  README.md  check_lora.py  export_gguf_v2.py  export_to_gguf.py  merge_for_vllm.py  merge_for_vllm_v2.py  ministral_3_rl_sudoku.py  push_gguf_to_hf.py  pyproject.toml  save_to_hf.py  save_to_hf_v2.py  test_sudoku_strategy.py  test_unsloth.py
deprecated/: gguf_format.py  merge_ministral_sudoku.py  save_to_hf.py
docs/: GGUF_EXPORT_GUIDE.md  SOLUTION.md
untested/: merge_and_quantize_nvfp4.py
vllm-custom/: Dockerfile  README.md
