[project]
name = "mon-projet"
version = "0.1.0"
requires-python = ">=3.10,<3.13"

dependencies = [
    "peft",
    "datasets==4.3.0",
    "trl==0.22.2",
    "bitsandbytes",
    "unsloth",
    "unsloth_zoo",
    "hf_transfer",
    "transformers @ git+https://github.com/huggingface/transformers.git@bf3f0ae70d0e902efab4b8517fce88f6697636ce"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
